@@ -6,6 +6,7 @@ Changes:
 - add explicit initialize/deinitialize functions HX_init, HX_exit
 Enhancements:
 - add the HX_memmem function
+- add the HXlist_empty function
 
 
 libHX 3.3 (January 20 2010)
